applets/systemtray: open context menu on pressed for SNI

With a workaround for QTBUG-59044, the same context menu will no longer
be opened twice.

BUG: 409768
FIXED-IN: 5.27