applets/systemtray/systemtray.cpp
@@ -304,6 +304,8 @@ void SystemTray::showStatusNotifierContextMenu(KJob *job, QQuickItem *statusNoti
         menu->winId();
         menu->windowHandle()->setTransientParent(statusNotifierIcon->window());
         menu->popup(QPoint(x, y));
+        // Workaround for QTBUG-59044
+        statusNotifierIcon->window()->mouseGrabberItem()->ungrabMouse();
     }
 }
 
